# InnovativeStructure

./: .gitignore  ChannelShuffleAttention  FurnaceConv.py  MHAConvSE.py  MultiHeadAttentionConv.py  MultiHeadAttentionConvShuffle.py  README.md  TSCBlock.py  V2flow.py  assistse.py  auto_search  channelattention2d.py  data1.py  deepconv1d.py  dyfc.py  featureatten3d  kde2d.py  local_global_attn.py  maxloss.py  mconv.py  multi_head_conv.py  rfs_show.py  selfconv2d  shuffleattention.py  t.py
RFS/: enx.py  resnet.py  rfs_v1.py  rfs_v2.py  train.py
conv/: FurnaceConv.py  FurnaceConvV2.py  ModulationAttn2d.py  MultiConv.py  PReluPlus.py  SDWConv2d.py  TSCBlock.py  attn.py  attnConv.py  auto_search.py  conv_out.py  conv_plus.py  conv_plus1d.py  conv_plus2d.py  conv_pluse1d.py  deepconv1d.py  dyfc.py  gconvout.py  gru_conv2d-old.py  gru_conv2d.py  gru_conv2dV2.py  gru_conv2dV3.py  gru_conv3d.py  gru_conv3dV2.py  kernel_se.py  mergeattention.py  minigru.py  quantum_residual_block.py  (+1 more)
operator_c/Q8_6/: CMakeLists.txt  net_sw.c  test.s  test_layer.cpp  test_layer.s  test_net.cpp  test_opt.cpp
operator_c/Q8_6/cpp_test/: module.cpp
operator_c/Q8_6/h/: layer.h  layer_ex.h  net.h  opt.h  tool.h
operator_c/Q8_6/h_sw/: layer.h  layer_ex.h  net.h  opt.h  opt_ex.h  tool.h
operator_c/Q8_6/hv2/: opt.h
operator_c/Q8_6/move_contral/: move_contral.cpp  move_contral.h
operator_c/Q8_6/py/: a.py  bnn_ops.py  model.pth  model.py  test_avg_.py  test_softmax.py  test_up.py  test_weight.py  train.py
operator_c/Q8_6/test/: cls_net_sw_125.c  net.c  net_sw_500.c  test_softmax.c
(+61 files in other folders)
